force-app/main/default/objects/SLPortal_Settings__c/SLPortal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SLPortal Settings</label>
</CustomObject>