force-app/main/default/objects/SLPortal_Settings__c/fields/Allow_Users_to_Email_CAP_Applications__c.field-meta.xml
<CustomField>
    <fullName>Allow_Users_to_Email_CAP_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this box, installers will be able to send applicants applications using the CAP methodology instead of Form Assembly.</description>
    <inlineHelpText>By checking this box, installers will be able to send applicants applications using the CAP methodology instead of Form Assembly.</inlineHelpText>
    <label>Allow Users to Email CAP Applications</label>
    <type>Checkbox</type>
</CustomField>