force-app/main/default/objects/SLPortal_Settings__c/fields/Require_IBLS_for_MSL_Loans__c.field-meta.xml
<CustomField>
    <fullName>Require_IBLS_for_MSL_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adds the IBLS requirement to the application process</inlineHelpText>
    <label>Require IBLS for MSL Loans</label>
    <type>Checkbox</type>
</CustomField>