force-app/main/default/objects/SLPortal_Settings__c/fields/Show_Disbursal_Method__c.field-meta.xml
<CustomField>
    <fullName>Show_Disbursal_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Shows Disbursal Method in the SLPAllDisbursals component</inlineHelpText>
    <label>Show Disbursal Method</label>
    <type>Checkbox</type>
</CustomField>