force-app/main/default/objects/SLPortal_Settings__c/fields/SREC_Opt_In_Quarters__c.field-meta.xml
<CustomField>
    <fullName>SREC_Opt_In_Quarters__c</fullName>
    <description>Shows the SREC Opt-In Quarters available for the SLPortal. Separate values by a comma.</description>
    <inlineHelpText>Shows the SREC Opt-In Quarters available for the SLPortal. Separate values by a comma.</inlineHelpText>
    <label>SREC Opt-In Quarters</label>
    <type>TextArea</type>
</CustomField>