force-app/main/default/objects/SLPortal_Settings__c/fields/Types_of_Documents_Available_for_Upload__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Documents_Available_for_Upload__c</fullName>
    <inlineHelpText>File Upload Types that are available to partners in the portal. NO SPACES</inlineHelpText>
    <label>Types of Documents Available for Upload</label>
    <type>TextArea</type>
</CustomField>